# clv

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/actions/check_code_style/: action.yaml
.github/actions/docker_build/: action.yaml
.github/actions/run_unit_tests/: action.yaml
.github/workflows/: build_and_check_code_style.yaml  build_and_run_unit_tests.yaml  ci.yaml  claude_pr_review.yaml
src/clv/: __init__.py  model.py
tests/: test_dummy.py
